@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.276 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.277 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -626,3 +626,5 @@ Changes from NetBSD 1.6 to NetBSD 2.0:
 		allowing attachment of pckbd(4) and pms(4) drivers.
 		Removed opms(4) driver and old qms(4) driver, renaming wsqms(4)
 		to qms(4).  [bjh21 20040313]
+	awk(1): switched from GNU awk to The One True New AWK by
+		B.W.Kernighan [jdolecek 200403113]
